Add error code to handle dryrun operations in API
