# cli/src/pcluster/api/models/dryrun_operation_exception_response_content.py
@@ -1,0 +1,68 @@
+# Copyright 2021 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file except in compliance
+# with the License. A copy of the License is located at http://aws.amazon.com/apache2.0/
+# or in the "LICENSE.txt" file accompanying this file. This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
+# OR CONDITIONS OF ANY KIND, express or implied. See the License for the specific language governing permissions and
+# limitations under the License.
+
+# pylint: disable=R0801
+
+from __future__ import absolute_import
+
+from datetime import date, datetime  # noqa: F401
+from typing import Dict, List  # noqa: F401
+
+from pcluster.api import util
+from pcluster.api.models.base_model_ import Model
+
+
+class DryrunOperationExceptionResponseContent(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message=None):  # noqa: E501
+        """DryrunOperationExceptionResponseContent - a model defined in OpenAPI
+
+        :param message: The message of this DryrunOperationExceptionResponseContent.  # noqa: E501
+        :type message: str
+        """
+        self.openapi_types = {"message": str}
+
+        self.attribute_map = {"message": "message"}
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> "DryrunOperationExceptionResponseContent":
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DryrunOperationExceptionResponseContent of this DryrunOperationExceptionResponseContent.  # noqa: E501
+        :rtype: DryrunOperationExceptionResponseContent
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self):
+        """Gets the message of this DryrunOperationExceptionResponseContent.
+
+
+        :return: The message of this DryrunOperationExceptionResponseContent.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message):
+        """Sets the message of this DryrunOperationExceptionResponseContent.
+
+
+        :param message: The message of this DryrunOperationExceptionResponseContent.
+        :type message: str
+        """
+
+        self._message = message
